# hiref

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  start.sh  train.sh
app/: __init__.py  app.py
app/callbacks/: __init__.py  diagnostics_callbacks.py  driver_callbacks.py  overview_callbacks.py
app/layouts/: __init__.py  diagnostics.py  drivers.py  overview.py
app/utils/: data_loader.py  plot_helpers.py
data/: preprocessor.py
data_generator/: data_generator.py
docs/: DRIVER_RELATIONSHIPS.md  constrained_model_diagram.html  hierarchical_model_diagram.html
inference/: predictor.py
models/: constrained_linear.py  hierarchical_model.py
scripts/: analyze_results.py  check_results.py  check_weights.py  test_predict_batch.py  test_predictor_manual.py  test_unconstrained_linear.py  train_model.py  validate_correlations.py  visualize_driver_curves.py
src/hier_reg/data/: constraint_helper.py  dataset.py  preprocessor.py
src/hier_reg/data_generator/: data_generator.py
src/hier_reg/inference/: predictor.py
src/hier_reg/models/: hierarchical_model.py
src/hier_reg/training/: metrics.py  trainer.py
tests/: test_hierarchical_model.py  test_metrics.py  test_preprocessor.py
training/: trainer.py
