[project]
name = "hier-reg"
version = "0.1.0"
description = "Hierarchical Regression Framework with constrained optimization"
requires-python = ">=3.10"
dependencies = [
    # Core Dependencies
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    # Dashboard Dependencies
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.17.0",
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hier_reg"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel",
]
